<resources>
    <string name="app_name">Tasks</string>
    <string name="add_new_category">Add new category</string>
    <string name="add_task">Add task</string>
    <string name="cancel">Cancel</string>
    <string name="categories">Categories</string>
    <string name="category">Category:</string>
    <string name="choose_due_date">Choose due date</string>
    <string name="completed">Completed</string>
    <string name="dark_color_type">Dark theme</string>
    <string name="dark_mode">Dark mode</string>
    <string name="default_category_generate_message">WARNING: This button is only here for debug purposes. Clicking OK will erase every existing category, and generate a predefined set of default categories. Are you sure you want to do this?</string>
    <string name="default_category_generate_title">Erase everything and generate default categories?</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="done">Done!</string>
    <string name="due_date">Due date:</string>
    <string name="due_date_nocolon">Due date</string>
    <string name="edit_category">Edit category</string>
    <string name="empty_trash">Empty trash</string>
    <string name="empty_trash_alert_title">Are you sure you want to empty the trash?</string>
    <string name="empty_trash_alert_message">This action is irreversible!</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_title">Enter title</string>
    <string name="generate_default_categories">Generate default categories</string>
    <string name="generate_overdue_task">Generate overdue task</string>
    <string name="generate_test_task">Generate test task</string>
    <string name="light_color_type">Light theme</string>
    <plurals name="n_tasks_in_trash">
        <item quantity="one">%d task in trash</item>
        <item quantity="other">%d tasks in trash</item>
    </plurals>
    <plurals name="n_tasks_completed">
        <item quantity="one">%d task completed</item>
        <item quantity="other">%d tasks completed</item>
    </plurals>
    <string name="new_category">New Category</string>
    <string name="ok">OK</string>
    <string name="overdue_task_generate_error">Can\'t generate overdue task: Please create a category first!</string>
    <string name="overdue_task_generate_success">Overdue task generated. Restart app to see overdue popup!</string>
    <string name="please_enter_title_toast">Please enter a title for your note!</string>
    <string name="please_choose_due_date_toast">Please choose the due date for your note!</string>
    <string name="preferences">hu.bme.jnsbbk.tasks.Preferences</string>
    <string name="random_task_generate_error">Can\'t generate random task: Please create a category first!</string>
    <string name="restore">Restore</string>
    <string name="save">Save</string>
    <string name="some_tasks_are_overdue">Some tasks are overdue:</string>
    <string name="task_completed_toast">Task completed!</string>
    <string name="tasks">Tasks</string>
    <string name="trash">Trash</string>
    <string name="mark_not_completed">Mark as not completed</string>
</resources>