<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="12dp"
    android:paddingBottom="20dp"
    android:paddingHorizontal="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.tasklist.TaskDetailsFragment">

    <TextView
        android:id="@+id/details_category_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/ftd_guide_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details_category_edit"
        app:layout_constraintBottom_toBottomOf="@id/details_category_edit"/>

    <TextView
        android:id="@+id/details_dueDate_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/details_dueDate_edit"
        app:layout_constraintEnd_toStartOf="@+id/details_dueDate_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details_dueDate_edit" />

    <Spinner
        android:id="@+id/details_category_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="4dp"
        android:textSize="16sp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ftd_guide_vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem=""/>

    <EditText
        android:id="@+id/details_dueDate_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:clickable="true"
        android:focusable="false"
        android:maxLines="1"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ftd_guide_vertical"
        app:layout_constraintTop_toBottomOf="@+id/details_category_edit"
        tools:text="2020.dec.4." />

    <EditText
        android:id="@+id/details_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_dueDate_edit" />

    <EditText
        android:id="@+id/details_description_edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp"
        android:gravity="top"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/details_doneSave_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_title_edit" />

    <Button
        android:id="@+id/details_doneSave_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorTextLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/details_delete_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_delete_24px"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/details_doneSave_button"
        app:layout_constraintBottom_toBottomOf="@id/details_doneSave_button"/>

    <Button
        android:id="@+id/details_edit_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_edit_24px"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="centerInside"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/details_delete_button"
        app:layout_constraintTop_toTopOf="@id/details_doneSave_button"
        app:layout_constraintBottom_toBottomOf="@id/details_doneSave_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ftd_guide_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

</androidx.constraintlayout.widget.ConstraintLayout>